Upgrade libraries versions and make compatible with Java 9